--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./css/styles.css" />
-  <title>Gallery Showcase</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Redzöne - Your Vision, Visualized</title>
+  <meta name="description" content="More than just a gallery. It's a creative community where art and technology meet.">
+  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/gaya.css" />
 </head>
-<body>
-  <h1>Gallery Showcase</h1>
-  <div id="gallery-container"></div>
-  <a href="/upload.html">Upload Photo</a>
+
+<body id="top">
+	
+  <header class="header" data-header>
+    <div class="container">
+      <a href="#">
+        <img src="https://files.catbox.moe/jebonz.svg" width="40" height="40" alt="Rboyz home" class="logo-small">
+        <img src="https://files.catbox.moe/jnq4hw.svg" width="126" height="28" alt="Rboyz home" class="logo">
+      </a>
+
+      <nav class="navbar" data-navbar>
+        <ul class="navbar-list">
+          <li><a href="#" class="navbar-link label-lg link:hover">Home</a></li>
+          <li><a href="#" class="navbar-link label-lg link:hover">Collection</a></li>
+          <li><a href="#" class="navbar-link label-lg link:hover">Members</a></li>
+        </ul>
+      </nav>
+
+      <div class="header-action">
+        <button class="nav-toggle-btn" aria-label="menu toggle" data-nav-toggler>
+          <ion-icon name="menu-outline" aria-hidden="true" class="default-icon"></ion-icon>
+          <ion-icon name="close-outline" aria-hidden="true" class="active-icon"></ion-icon>
+        </button>
+      </div>
+    </div>
+  </header>
+  
+  <section class="section top-collection" aria-labelledby="collection-label">
+      	<div class="container"> 
+      	</div>
+      </section>
+      
+  <main>
+    <section class="section discover" aria-labelledby="discover-label">
+      <div class="container">
+        <h2 class="headline-md section-title text-center" id="discover-label">Explore Our Collection</h2>
+        <ul class="grid-list" id="gallery-container"></ul>
+        <button id="show-more-btn" class="btn-link">Show More</button>
+      </div>
+    </section>
+  </main>
+  
+  <!-- Modal for Image Preview -->
+  <div id="imageModal" class="modal">
+    <div class="modal-content">
+      <span id="closeModal" class="close">&times;</span>
+      <img id="modalImage" class="modal-image" src="" alt="Preview Image">
+      <p id="modalCaption" class="modal-caption"></p>
+    </div>
+  </div>
+
+  <section class="section contact" aria-label="contact">
+    <div class="container">
+      <h2 class="headline-md section-title text-center">Get in touch!</h2>
+      <p class="body-md section-text text-center">
+        More than just a gallery. It's a creative community where art and technology meet.
+      </p>
+      <a href="#" class="btn btn-primary"><span class="span">Follow us</span></a>
+    </div>
+  </section>
+
+  <div class="footer-bottom">
+    <div class="container">
+      <p class="body-md text-center copyright">&copy; 2024 Redzöne. Made by gopalasu.</p>
+    </div>
+  </div>
+
+  <a href="#top" class="back-to-top btn-icon" aria-label="back to top" data-back-top-btn>
+    <ion-icon name="arrow-up"></ion-icon>
+  </a>
 
   <script>
-    const galleryContainer = document.getElementById('gallery-container');
-
     async function loadGallery() {
-      const response = await fetch('/gallery');
-      const images = await response.json();
-      galleryContainer.innerHTML = images
-        .map(
-          (image) =>
-            `<div class="gallery-item">
-              <img src="/uploads/${image.filename}" alt="${image.originalName}" />
-              <p>${image.originalName.customName}</p>
-            </div>`
-        )
-        .join('');
+      try {
+        const response = await fetch('/gallery');
+        if (!response.ok) {
+          throw new Error(`HTTP error! Status: ${response.status}`);
+        }
+
+        const gallery = await response.json();
+        const galleryContainer = document.getElementById('gallery-container');
+        const showMoreBtn = document.getElementById('show-more-btn');
+
+        let itemsToShow = 3; // Initial number of items to show
+        let currentIndex = 0;
+
+        function renderGallery() {
+          const items = gallery.slice(0, currentIndex + itemsToShow);
+          galleryContainer.innerHTML = items
+            .map(
+              (item) => `
+                <li>
+                  <div class="discover-card card">
+                    <div class="card-banner img-holder" style="--width: 500; --height: 500;">
+                      <img src="${item.imgUrl}" width="500" height="500" loading="lazy" alt="${item.username}" class="img-cover" onclick="openModal('${item.imgUrl}', '${item.caption}')">
+                    </div>
+                    <div class="card-profile">
+                      <img src="https://files.catbox.moe/z8uqjv.jpg" width="32" height="32" loading="lazy" alt="rb profile" class="img">
+                      <a class="link:hover">@${item.username}</a>
+                    </div>
+                    <h3 class="title-sm card-title">
+                </h3>
+                    <div class="card-meta">
+                      <div class="card-price"><span class="span">${item.caption}</span></div>
+                    </div>
+                  </div>
+                </li>
+              `
+            )
+            .join('');
+
+          if (currentIndex + itemsToShow >= gallery.length) {
+            showMoreBtn.textContent = 'No More';
+            showMoreBtn.disabled = true;
+            showMoreBtn.style.cursor = 'not-allowed';
+          }
+        }
+
+        renderGallery();
+
+        showMoreBtn.addEventListener('click', () => {
+          currentIndex += itemsToShow;
+          renderGallery();
+        });
+      } catch (error) {
+        console.error('Error loading gallery:', error);
+        alert('Failed to load gallery. Please try again later.');
+      }
     }
 
-    loadGallery();
+    function openModal(imageUrl, caption) {
+      document.getElementById('modalImage').src = imageUrl;
+      document.getElementById('modalCaption').innerText = caption;
+      document.getElementById('imageModal').style.display = 'flex';
+    }
+
+    document.getElementById('closeModal').addEventListener('click', function () {
+      document.getElementById('imageModal').style.display = 'none';
+    });
+
+    window.onclick = function(event) {
+      if (event.target == document.getElementById('imageModal')) {
+        document.getElementById('imageModal').style.display = 'none';
+      }
+    };
+
+    document.addEventListener('DOMContentLoaded', loadGallery);
   </script>
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
+
 </html>
