--- a/public/index.html
+++ b/public/index.html
@@ -159,6 +159,7 @@
 
     document.addEventListener('DOMContentLoaded', loadGallery);
   </script>
+	  <script src="./js/script.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
