--- a/public/member.html
+++ b/public/member.html
@@ -1,101 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./css/styles.css" />
-  <title>Upload Photo & Add Member</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
-      background-color: #f4f4f9;
-    }
-    .container {
-      max-width: 600px;
-      margin: 20px auto;
-      padding: 20px;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-    h1 {
-      margin-bottom: 20px;
-      color: #333;
-    }
-    label {
-      display: block;
-      margin: 10px 0 5px;
-      font-weight: bold;
-    }
-    input {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 20px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    button {
-      padding: 10px 15px;
-      background-color: #007bff;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #0056b3;
-    }
-    a {
-      display: inline-block;
-      margin-top: 20px;
-      text-decoration: none;
-      color: #007bff;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Redzöne - Your Vision, Visualized</title>
+  <meta name="description" content="More than just a gallery. It's a creative community where art and technology meet.">
+  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/gaya.css" />
 </head>
-<body>
 
-<div class="container">
-  <h1>Upload Photo</h1>
-  <form action="/upload" method="POST" enctype="multipart/form-data">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required />
+<body id="top">
+	
+  <header class="header" data-header>
+    <div class="container">
+      <a href="/">
+        <img src="https://files.catbox.moe/jebonz.svg" width="40" height="40" alt="Rboyz home" class="logo-small">
+        <img src="https://files.catbox.moe/jnq4hw.svg" width="126" height="28" alt="Rboyz home" class="logo">
+      </a>
 
-    <label for="caption">Caption:</label>
-    <input type="text" id="caption" name="caption" required />
+      <nav class="navbar" data-navbar>
+        <ul class="navbar-list">
+          <li><a href="/" class="navbar-link label-lg link:hover">Home</a></li>
+          <li><a href="/collection" class="navbar-link label-lg link:hover">Collection</a></li>
+          <li><a href="/member" class="navbar-link label-lg link:hover">Members</a></li>
+        </ul>
+      </nav>
 
-    <label for="pfpUrl">Profile Picture URL:</label>
-    <input type="url" id="pfpUrl" name="pfpUrl" required />
+      <div class="header-action">
+        <button class="nav-toggle-btn" aria-label="menu toggle" data-nav-toggler>
+          <ion-icon name="menu-outline" aria-hidden="true" class="default-icon"></ion-icon>
+          <ion-icon name="close-outline" aria-hidden="true" class="active-icon"></ion-icon>
+        </button>
+      </div>
+    </div>
+  </header>
+  
+  <section class="section top-collection" aria-labelledby="collection-label">
+      	<div class="container"> 
+      	</div>
+      </section>
+      
+  <!-- 
+        - SELLERS
+      -->
 
-    <label for="imgUrl">Image URL:</label>
-    <input type="url" id="imgUrl" name="imgUrl" required />
+      <section class="section sellers" aria-labelledby="sellers-label">
+        <div class="container">
 
-    <button type="submit">Upload</button>
-  </form>
-  <a href="/">Back to Gallery</a>
-</div>
+          <h2 class="headline-md section-title text-center" id="sellers-label">Our Admin & Member</h2>
 
-<div class="container">
-  <h1>Add Member</h1>
-  <form action="/addmem" method="POST">
-    <label for="add-username">Username:</label>
-    <input type="text" id="add-username" name="username" required />
+          <ul class="grid-list">
 
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required />
+            <li>
+              <div class="seller-card card"></div>
+            </li>
 
-    <label for="pfp">Profile Picture URL:</label>
-    <input type="url" id="pfp" name="pfp" required />
+          </ul>
 
-    <button type="submit">Add Member</button>
-  </form>
-  <a href="/">Back to Gallery</a>
-</div>
+        </div>
+      </section>
 
+
+      <!-- 
+        - #QNA
+      -->
+
+  <section class="section contact" aria-label="contact">
+    <div class="container">
+      <h2 class="headline-md section-title text-center">Get in touch!</h2>
+      <p class="body-md section-text text-center">
+        More than just a gallery. It's a creative community where art and technology meet.
+      </p>
+      <a href="https://www.tiktok.com/@redflagboyz_?_t=8s21LKFWuSm&_r=1" class="btn btn-primary"><span class="span">Follow us</span></a>
+    </div>
+  </section>
+
+  <div class="footer-bottom">
+    <div class="container">
+      <p class="body-md text-center copyright">&copy; 2024 Redzöne. Made by gopalasu.</p>
+    </div>
+  </div>
+
+  <a href="#top" class="back-to-top btn-icon" aria-label="back to top" data-back-top-btn>
+    <ion-icon name="arrow-up"></ion-icon>
+  </a>
+
+
+ <script>
+  // URL endpoint untuk mendapatkan data anggota
+  const apiUrl = "/api/members"; // Pastikan Anda membuat endpoint ini di server.
+
+  // Fungsi untuk menampilkan anggota di halaman
+  async function displayMembers() {
+    try {
+      const response = await fetch(apiUrl); // Ambil data dari API
+      const members = await response.json(); // Parse hasil sebagai JSON
+
+      // Elemen tempat anggota akan ditambahkan
+      const gridList = document.querySelector(".grid-list");
+
+      members.forEach((member) => {
+        // Buat elemen baru untuk kartu anggota
+        const listItem = document.createElement("li");
+
+        listItem.innerHTML = `
+          <div class="seller-card card">
+            <figure class="card-banner">
+              <img src="${member.pfp}" width="64" height="64" loading="lazy" alt="${member.name} profile">
+              <ion-icon name="checkmark-circle"></ion-icon>
+            </figure>
+            <div class="card-title-wrapper">
+              <h3 class="title-sm">
+                <a href="#" class="link:hover">${member.name}</a>
+              </h3>
+              <p class="user-name label-md">@${member.username}</p>
+            </div>
+            <button class="btn-icon outline" aria-label="Hire ${member.name}">
+              <ion-icon name="person-add-outline" aria-hidden="true"></ion-icon>
+            </button>
+          </div>
+        `;
+
+        // Tambahkan kartu anggota ke dalam daftar
+        gridList.appendChild(listItem);
+      });
+    } catch (error) {
+      console.error("Error fetching members:", error);
+    }
+  }
+
+  // Panggil fungsi untuk menampilkan anggota saat halaman dimuat
+  document.addEventListener("DOMContentLoaded", displayMembers);
+</script>
+
+  <script src="./js/script.js"></script>
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
+
 </html>
