--- a/public/member.html
+++ b/public/member.html
@@ -119,7 +119,7 @@
               <p class="user-name label-md">@${member.username}</p>
             </div>
             <button class="btn-icon outline" aria-label="Hire ${member.name}">
-              <ion-icon name="person-add-outline" aria-hidden="true"></ion-icon>
+              <ion-icon name="sparkles-outline" aria-hidden="true"></ion-icon>
             </button>
           </div>
         `;
