--- a/public/upload.html
+++ b/public/upload.html
@@ -5,58 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./css/styles.css" />
   <title>Upload Photo & Add Member</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
-      background-color: #f4f4f9;
-    }
-    .container {
-      max-width: 600px;
-      margin: 20px auto;
-      padding: 20px;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-    h1 {
-      margin-bottom: 20px;
-      color: #333;
-    }
-    label {
-      display: block;
-      margin: 10px 0 5px;
-      font-weight: bold;
-    }
-    input {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 20px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    button {
-      padding: 10px 15px;
-      background-color: #007bff;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #0056b3;
-    }
-    a {
-      display: inline-block;
-      margin-top: 20px;
-      text-decoration: none;
-      color: #007bff;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  
 </head>
 <body>
 
@@ -83,11 +32,17 @@
 <div class="container">
   <h1>Add Member</h1>
   <form action="/addmem" method="POST">
-    <label for="add-username">Username:</label>
-    <input type="text" id="add-username" name="username" required />
-
+    
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required />
+    
+    <label for="role">Role:</label>
+    <select id="role" name="role" required>
+      <option value="owner">Owner</option>
+      <option value="staff">Staff</option>
+      <option value="admin">Admin</option>
+      <option value="member">Member</option>
+    </select>
 
     <label for="pfp">Profile Picture URL:</label>
     <input type="url" id="pfp" name="pfp" required />
