--- a/public/member.html
+++ b/public/member.html
@@ -116,7 +116,7 @@
               <h3 class="title-sm">
                 <a href="#" class="link:hover">${member.name}</a>
               </h3>
-              <p class="user-name label-md">@${member.role}</p>
+              <p class="user-name label-md">${member.role}</p>
             </div>
             <button class="btn-icon outline" aria-label="Hire ${member.name}">
               <ion-icon name="sparkles-outline" aria-hidden="true"></ion-icon>
