--- a/public/member.html
+++ b/public/member.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Redzöne - Your Vision, Visualized</title>
+  <title>Redzöne - Secret Agent</title>
   <meta name="description" content="More than just a gallery. It's a creative community where art and technology meet.">
   <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
   <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -51,13 +51,10 @@
         <div class="container">
 
           <h2 class="headline-md section-title text-center" id="sellers-label">Our Admin & Member</h2>
-
           <ul class="grid-list">
-
             <li>
               <div class="seller-card card"></div>
             </li>
-
           </ul>
 
         </div>
