--- a/public/rec.html
+++ b/public/rec.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Redzöne - Recruitment</title>
-  <meta name="description" content="More than just a gallery. It's a creative community where art and technology meet.">
+  <meta name="description" content="Open Recruitment for Video Editor & Graphic Designer.">
   <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
   <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/gaya.css" />
